[package]
name = "stix-rs"
version = "0.1.0"
edition = "2024"
description = "STIX 2.1 types and helpers for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
uuid = { version = "1.3", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
